src/test/deca/syntax/invalid/resultats/test28_infinite-synt.res
./src/test/deca/syntax/invalid/test28_infinite.deca:17:9: The float read is too large for the machine (32 bits)
